[package]
name = "bounds-check-cookbook"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0 OR Zlib"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# None

[profile.release]
# Include complete debug symbols in the generated binary.
# `cargo asm` already sets it internally, but this is useful for profiling.
debug = true
